// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.policy;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/policy";

// ChromeLoginAPIService provides functions to test the chrome login API.
service ChromeLoginAPIService {
  rpc TestLaunchManagedGuestSession(TestLaunchManagedGuestSessionRequest) returns (google.protobuf.Empty) {}
}

message TestLaunchManagedGuestSessionRequest {
  string ExtensionID = 1;
}
